# bq-semantic-search

./: .gitignore  bq-search.html  bq-search.service  bq-semantic-search.py  bq_semantic_search.py  compute_embeddings.py  file_structure.md  readme.md
bq_search/: __init__.py  api.py  bq_semantic_search.py  post_manager.py  tag_index.py
vector_search/: pyproject.toml  setup.py
vector_search/src/vector_search/: __init__.py  clustering.py  search_index.py  search_strategies.py
vector_search/tests/: test_vector_search.py
